--- a/app/src/main/res/layout/fragment_business.xml
+++ b/app/src/main/res/layout/fragment_business.xml
@@ -6,8 +6,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.BusinessFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Football"
+        android:textSize="@dimen/_23ssp"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     <LinearLayout
         android:id="@+id/searchLL"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -60,6 +72,7 @@
         android:id="@+id/businessPersonsRv"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:visibility="gone"
         tools:listitem="@layout/item_view_business_person"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         android:tint="@color/white"
         app:tint = "@color/white"
