--- a/app/src/main/res/layout/fragment_merchant.xml
+++ b/app/src/main/res/layout/fragment_merchant.xml
@@ -5,8 +5,19 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.MerchantFragment">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hockey"
+        android:textSize="@dimen/_23ssp"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/searchLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -56,6 +67,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -104,6 +116,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:tint="@color/white"
+        android:visibility="gone"
         app:tint = "@color/white"
         android:layout_margin="@dimen/_10sdp"
         android:theme="@style/plusIconColor"
